mobProl/src/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID L_BRACK variables functions mainBody R_BRACK
Rule 2     mainBody -> MAIN L_PAR R_PAR L_BRACK variables statements R_BRACK
Rule 3     body -> L_BRACK statements R_BRACK
Rule 4     variables -> <empty>
Rule 5     variables -> VAR type ID DOT_COMMA variables
Rule 6     variables -> VAR type assignment DOT_COMMA variables
Rule 7     variables -> VAR type ID L_KEY INTEGER R_KEY DOT_COMMA variables
Rule 8     functions -> <empty>
Rule 9     functions -> FUNCTION type ID L_PAR functionsHelp R_PAR L_BRACK variables statements R_BRACK
Rule 10    functionsHelp -> <empty>
Rule 11    functionsHelp -> type ID
Rule 12    functionsHelp -> type ID COMMA functionsHelp2
Rule 13    functionsHelp2 -> type ID
Rule 14    functionsHelp2 -> type ID COMMA functionsHelp2
Rule 15    type -> INT
Rule 16    type -> DECIM
Rule 17    type -> BOOL
Rule 18    type -> CHAR
Rule 19    type -> STRING
Rule 20    statements -> <empty>
Rule 21    statements -> statement statements
Rule 22    statement -> <empty>
Rule 23    statement -> assignment DOT_COMMA
Rule 24    statement -> functionCall DOT_COMMA
Rule 25    statement -> ifBlock
Rule 26    statement -> whileBlock
Rule 27    statement -> print DOT_COMMA
Rule 28    statement -> read DOT_COMMA
Rule 29    statement -> lineComment
Rule 30    assignment -> idCall ASSIGN megaExp
Rule 31    assignment -> idCall ASSIGN functionCall
Rule 32    assignment -> assignIncr
Rule 33    assignment -> assignDecr
Rule 34    assignIncr -> idCall INCREMENT
Rule 35    assignDecr -> idCall DECREMENT
Rule 36    functionCall -> ID L_PAR functionCallParams R_PAR
Rule 37    functionCallParams -> functionCallParamsOptional
Rule 38    functionCallParamsOptional -> <empty>
Rule 39    functionCallParamsOptional -> megaExp functionCallParamsMultiple
Rule 40    functionCallParamsMultiple -> <empty>
Rule 41    functionCallParamsMultiple -> COMMA functionCallParamsOptional
Rule 42    ifBlock -> IF L_PAR megaExp R_PAR body optionalElse
Rule 43    optionalElse -> <empty>
Rule 44    optionalElse -> ELSE body
Rule 45    whileBlock -> WHILE L_PAR megaExp R_PAR body
Rule 46    megaExp -> superExp
Rule 47    megaExp -> superExp AND superExp
Rule 48    megaExp -> superExp OR superExp
Rule 49    superExp -> exp
Rule 50    superExp -> exp MORE_THAN exp
Rule 51    superExp -> exp LESS_THAN exp
Rule 52    superExp -> exp MORE_EQUAL exp
Rule 53    superExp -> exp LESS_EQUAL exp
Rule 54    superExp -> exp EQUAL exp
Rule 55    superExp -> exp NOT_EQUAL exp
Rule 56    exp -> term
Rule 57    exp -> term PLUS exp
Rule 58    exp -> term MINUS exp
Rule 59    term -> factor
Rule 60    term -> factor TIMES term
Rule 61    term -> factor DIVIDE term
Rule 62    term -> factor MOD term
Rule 63    factor -> INTEGER
Rule 64    factor -> DECIMAL
Rule 65    factor -> ALPHANUMERIC
Rule 66    factor -> CHARACTER
Rule 67    factor -> BOOLEAN
Rule 68    factor -> idCall
Rule 69    factor -> L_PAR megaExp R_PAR
Rule 70    factor -> functionCall
Rule 71    idCall -> ID
Rule 72    idCall -> ID L_KEY exp R_KEY
Rule 73    print -> PRINT L_PAR print_help R_PAR
Rule 74    print_help -> <empty>
Rule 75    print_help -> ALPHANUMERIC
Rule 76    print_help -> idCall
Rule 77    print_help -> functionCall
Rule 78    print_help -> megaExp
Rule 79    read -> READ L_PAR idCall R_PAR
Rule 80    lineComment -> COMMENT_LINE ALPHANUMERIC END_LINE

Terminals, with rules where they appear

ALPHANUMERIC         : 65 75 80
AND                  : 47
ASSIGN               : 30 31
BOOL                 : 17
BOOLEAN              : 67
CHAR                 : 18
CHARACTER            : 66
COMMA                : 12 14 41
COMMENT_LINE         : 80
DECIM                : 16
DECIMAL              : 64
DECREMENT            : 35
DIVIDE               : 61
DOT_COMMA            : 5 6 7 23 24 27 28
ELSE                 : 44
END_LINE             : 80
EQUAL                : 54
FUNCTION             : 9
ID                   : 1 5 7 9 11 12 13 14 36 71 72
IF                   : 42
INCREMENT            : 34
INT                  : 15
INTEGER              : 7 63
LESS_EQUAL           : 53
LESS_THAN            : 51
L_BRACK              : 1 2 3 9
L_KEY                : 7 72
L_PAR                : 2 9 36 42 45 69 73 79
MAIN                 : 2
MINUS                : 58
MOD                  : 62
MORE_EQUAL           : 52
MORE_THAN            : 50
NOT_EQUAL            : 55
OR                   : 48
PLUS                 : 57
PRINT                : 73
PROGRAM              : 1
READ                 : 79
R_BRACK              : 1 2 3 9
R_KEY                : 7 72
R_PAR                : 2 9 36 42 45 69 73 79
STRING               : 19
TIMES                : 60
VAR                  : 5 6 7
WHILE                : 45
error                : 

Nonterminals, with rules where they appear

assignDecr           : 33
assignIncr           : 32
assignment           : 6 23
body                 : 42 44 45
exp                  : 49 50 50 51 51 52 52 53 53 54 54 55 55 57 58 72
factor               : 59 60 61 62
functionCall         : 24 31 70 77
functionCallParams   : 36
functionCallParamsMultiple : 39
functionCallParamsOptional : 37 41
functions            : 1
functionsHelp        : 9
functionsHelp2       : 12 14
idCall               : 30 31 34 35 68 76 79
ifBlock              : 25
lineComment          : 29
mainBody             : 1
megaExp              : 30 39 42 45 69 78
optionalElse         : 42
print                : 27
print_help           : 73
program              : 0
read                 : 28
statement            : 21
statements           : 2 3 9 21
superExp             : 46 47 47 48 48
term                 : 56 57 58 60 61 62
type                 : 5 6 7 9 11 12 13 14
variables            : 1 2 5 6 7 9
whileBlock           : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID L_BRACK variables functions mainBody R_BRACK

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID L_BRACK variables functions mainBody R_BRACK

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . L_BRACK variables functions mainBody R_BRACK

    L_BRACK         shift and go to state 4


state 4

    (1) program -> PROGRAM ID L_BRACK . variables functions mainBody R_BRACK
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type assignment DOT_COMMA variables
    (7) variables -> . VAR type ID L_KEY INTEGER R_KEY DOT_COMMA variables

    FUNCTION        reduce using rule 4 (variables -> .)
    MAIN            reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 5

state 5

    (1) program -> PROGRAM ID L_BRACK variables . functions mainBody R_BRACK
    (8) functions -> .
    (9) functions -> . FUNCTION type ID L_PAR functionsHelp R_PAR L_BRACK variables statements R_BRACK

    MAIN            reduce using rule 8 (functions -> .)
    FUNCTION        shift and go to state 8

    functions                      shift and go to state 7

state 6

    (5) variables -> VAR . type ID DOT_COMMA variables
    (6) variables -> VAR . type assignment DOT_COMMA variables
    (7) variables -> VAR . type ID L_KEY INTEGER R_KEY DOT_COMMA variables
    (15) type -> . INT
    (16) type -> . DECIM
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . STRING

    INT             shift and go to state 10
    DECIM           shift and go to state 11
    BOOL            shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14

    type                           shift and go to state 9

state 7

    (1) program -> PROGRAM ID L_BRACK variables functions . mainBody R_BRACK
    (2) mainBody -> . MAIN L_PAR R_PAR L_BRACK variables statements R_BRACK

    MAIN            shift and go to state 16

    mainBody                       shift and go to state 15

state 8

    (9) functions -> FUNCTION . type ID L_PAR functionsHelp R_PAR L_BRACK variables statements R_BRACK
    (15) type -> . INT
    (16) type -> . DECIM
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . STRING

    INT             shift and go to state 10
    DECIM           shift and go to state 11
    BOOL            shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14

    type                           shift and go to state 17

state 9

    (5) variables -> VAR type . ID DOT_COMMA variables
    (6) variables -> VAR type . assignment DOT_COMMA variables
    (7) variables -> VAR type . ID L_KEY INTEGER R_KEY DOT_COMMA variables
    (30) assignment -> . idCall ASSIGN megaExp
    (31) assignment -> . idCall ASSIGN functionCall
    (32) assignment -> . assignIncr
    (33) assignment -> . assignDecr
    (71) idCall -> . ID
    (72) idCall -> . ID L_KEY exp R_KEY
    (34) assignIncr -> . idCall INCREMENT
    (35) assignDecr -> . idCall DECREMENT

    ID              shift and go to state 18

    assignment                     shift and go to state 19
    idCall                         shift and go to state 20
    assignIncr                     shift and go to state 21
    assignDecr                     shift and go to state 22

state 10

    (15) type -> INT .

    ID              reduce using rule 15 (type -> INT .)


state 11

    (16) type -> DECIM .

    ID              reduce using rule 16 (type -> DECIM .)


state 12

    (17) type -> BOOL .

    ID              reduce using rule 17 (type -> BOOL .)


state 13

    (18) type -> CHAR .

    ID              reduce using rule 18 (type -> CHAR .)


state 14

    (19) type -> STRING .

    ID              reduce using rule 19 (type -> STRING .)


state 15

    (1) program -> PROGRAM ID L_BRACK variables functions mainBody . R_BRACK

    R_BRACK         shift and go to state 23


state 16

    (2) mainBody -> MAIN . L_PAR R_PAR L_BRACK variables statements R_BRACK

    L_PAR           shift and go to state 24


state 17

    (9) functions -> FUNCTION type . ID L_PAR functionsHelp R_PAR L_BRACK variables statements R_BRACK

    ID              shift and go to state 25


state 18

    (5) variables -> VAR type ID . DOT_COMMA variables
    (7) variables -> VAR type ID . L_KEY INTEGER R_KEY DOT_COMMA variables
    (71) idCall -> ID .
    (72) idCall -> ID . L_KEY exp R_KEY

    DOT_COMMA       shift and go to state 26
    L_KEY           shift and go to state 27
    ASSIGN          reduce using rule 71 (idCall -> ID .)
    INCREMENT       reduce using rule 71 (idCall -> ID .)
    DECREMENT       reduce using rule 71 (idCall -> ID .)


state 19

    (6) variables -> VAR type assignment . DOT_COMMA variables

    DOT_COMMA       shift and go to state 28


state 20

    (30) assignment -> idCall . ASSIGN megaExp
    (31) assignment -> idCall . ASSIGN functionCall
    (34) assignIncr -> idCall . INCREMENT
    (35) assignDecr -> idCall . DECREMENT

    ASSIGN          shift and go to state 29
    INCREMENT       shift and go to state 30
    DECREMENT       shift and go to state 31


state 21

    (32) assignment -> assignIncr .

    DOT_COMMA       reduce using rule 32 (assignment -> assignIncr .)


state 22

    (33) assignment -> assignDecr .

    DOT_COMMA       reduce using rule 33 (assignment -> assignDecr .)


state 23

    (1) program -> PROGRAM ID L_BRACK variables functions mainBody R_BRACK .

    $end            reduce using rule 1 (program -> PROGRAM ID L_BRACK variables functions mainBody R_BRACK .)


state 24

    (2) mainBody -> MAIN L_PAR . R_PAR L_BRACK variables statements R_BRACK

    R_PAR           shift and go to state 32


state 25

    (9) functions -> FUNCTION type ID . L_PAR functionsHelp R_PAR L_BRACK variables statements R_BRACK

    L_PAR           shift and go to state 33


state 26

    (5) variables -> VAR type ID DOT_COMMA . variables
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type assignment DOT_COMMA variables
    (7) variables -> . VAR type ID L_KEY INTEGER R_KEY DOT_COMMA variables

    FUNCTION        reduce using rule 4 (variables -> .)
    MAIN            reduce using rule 4 (variables -> .)
    ID              reduce using rule 4 (variables -> .)
    IF              reduce using rule 4 (variables -> .)
    WHILE           reduce using rule 4 (variables -> .)
    PRINT           reduce using rule 4 (variables -> .)
    READ            reduce using rule 4 (variables -> .)
    COMMENT_LINE    reduce using rule 4 (variables -> .)
    R_BRACK         reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 34

state 27

    (7) variables -> VAR type ID L_KEY . INTEGER R_KEY DOT_COMMA variables
    (72) idCall -> ID L_KEY . exp R_KEY
    (56) exp -> . term
    (57) exp -> . term PLUS exp
    (58) exp -> . term MINUS exp
    (59) term -> . factor
    (60) term -> . factor TIMES term
    (61) term -> . factor DIVIDE term
    (62) term -> . factor MOD term
    (63) factor -> . INTEGER
    (64) factor -> . DECIMAL
    (65) factor -> . ALPHANUMERIC
    (66) factor -> . CHARACTER
    (67) factor -> . BOOLEAN
    (68) factor -> . idCall
    (69) factor -> . L_PAR megaExp R_PAR
    (70) factor -> . functionCall
    (71) idCall -> . ID
    (72) idCall -> . ID L_KEY exp R_KEY
    (36) functionCall -> . ID L_PAR functionCallParams R_PAR

    INTEGER         shift and go to state 36
    DECIMAL         shift and go to state 40
    ALPHANUMERIC    shift and go to state 41
    CHARACTER       shift and go to state 42
    BOOLEAN         shift and go to state 43
    L_PAR           shift and go to state 45
    ID              shift and go to state 35

    exp                            shift and go to state 37
    term                           shift and go to state 38
    factor                         shift and go to state 39
    idCall                         shift and go to state 44
    functionCall                   shift and go to state 46

state 28

    (6) variables -> VAR type assignment DOT_COMMA . variables
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type assignment DOT_COMMA variables
    (7) variables -> . VAR type ID L_KEY INTEGER R_KEY DOT_COMMA variables

    FUNCTION        reduce using rule 4 (variables -> .)
    MAIN            reduce using rule 4 (variables -> .)
    ID              reduce using rule 4 (variables -> .)
    IF              reduce using rule 4 (variables -> .)
    WHILE           reduce using rule 4 (variables -> .)
    PRINT           reduce using rule 4 (variables -> .)
    READ            reduce using rule 4 (variables -> .)
    COMMENT_LINE    reduce using rule 4 (variables -> .)
    R_BRACK         reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 47

state 29

    (30) assignment -> idCall ASSIGN . megaExp
    (31) assignment -> idCall ASSIGN . functionCall
    (46) megaExp -> . superExp
    (47) megaExp -> . superExp AND superExp
    (48) megaExp -> . superExp OR superExp
    (36) functionCall -> . ID L_PAR functionCallParams R_PAR
    (49) superExp -> . exp
    (50) superExp -> . exp MORE_THAN exp
    (51) superExp -> . exp LESS_THAN exp
    (52) superExp -> . exp MORE_EQUAL exp
    (53) superExp -> . exp LESS_EQUAL exp
    (54) superExp -> . exp EQUAL exp
    (55) superExp -> . exp NOT_EQUAL exp
    (56) exp -> . term
    (57) exp -> . term PLUS exp
    (58) exp -> . term MINUS exp
    (59) term -> . factor
    (60) term -> . factor TIMES term
    (61) term -> . factor DIVIDE term
    (62) term -> . factor MOD term
    (63) factor -> . INTEGER
    (64) factor -> . DECIMAL
    (65) factor -> . ALPHANUMERIC
    (66) factor -> . CHARACTER
    (67) factor -> . BOOLEAN
    (68) factor -> . idCall
    (69) factor -> . L_PAR megaExp R_PAR
    (70) factor -> . functionCall
    (71) idCall -> . ID
    (72) idCall -> . ID L_KEY exp R_KEY

    ID              shift and go to state 51
    INTEGER         shift and go to state 53
    DECIMAL         shift and go to state 40
    ALPHANUMERIC    shift and go to state 41
    CHARACTER       shift and go to state 42
    BOOLEAN         shift and go to state 43
    L_PAR           shift and go to state 45

    idCall                         shift and go to state 44
    megaExp                        shift and go to state 48
    functionCall                   shift and go to state 49
    superExp                       shift and go to state 50
    exp                            shift and go to state 52
    term                           shift and go to state 38
    factor                         shift and go to state 39

state 30

    (34) assignIncr -> idCall INCREMENT .

    DOT_COMMA       reduce using rule 34 (assignIncr -> idCall INCREMENT .)


state 31

    (35) assignDecr -> idCall DECREMENT .

    DOT_COMMA       reduce using rule 35 (assignDecr -> idCall DECREMENT .)


state 32

    (2) mainBody -> MAIN L_PAR R_PAR . L_BRACK variables statements R_BRACK

    L_BRACK         shift and go to state 54


state 33

    (9) functions -> FUNCTION type ID L_PAR . functionsHelp R_PAR L_BRACK variables statements R_BRACK
    (10) functionsHelp -> .
    (11) functionsHelp -> . type ID
    (12) functionsHelp -> . type ID COMMA functionsHelp2
    (15) type -> . INT
    (16) type -> . DECIM
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . STRING

    R_PAR           reduce using rule 10 (functionsHelp -> .)
    INT             shift and go to state 10
    DECIM           shift and go to state 11
    BOOL            shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14

    type                           shift and go to state 55
    functionsHelp                  shift and go to state 56

state 34

    (5) variables -> VAR type ID DOT_COMMA variables .

    FUNCTION        reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    MAIN            reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    ID              reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    IF              reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    WHILE           reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    PRINT           reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    READ            reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    COMMENT_LINE    reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    R_BRACK         reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)


state 35

    (71) idCall -> ID .
    (72) idCall -> ID . L_KEY exp R_KEY
    (36) functionCall -> ID . L_PAR functionCallParams R_PAR

    TIMES           reduce using rule 71 (idCall -> ID .)
    DIVIDE          reduce using rule 71 (idCall -> ID .)
    MOD             reduce using rule 71 (idCall -> ID .)
    PLUS            reduce using rule 71 (idCall -> ID .)
    MINUS           reduce using rule 71 (idCall -> ID .)
    R_KEY           reduce using rule 71 (idCall -> ID .)
    MORE_THAN       reduce using rule 71 (idCall -> ID .)
    LESS_THAN       reduce using rule 71 (idCall -> ID .)
    MORE_EQUAL      reduce using rule 71 (idCall -> ID .)
    LESS_EQUAL      reduce using rule 71 (idCall -> ID .)
    EQUAL           reduce using rule 71 (idCall -> ID .)
    NOT_EQUAL       reduce using rule 71 (idCall -> ID .)
    AND             reduce using rule 71 (idCall -> ID .)
    OR              reduce using rule 71 (idCall -> ID .)
    R_PAR           reduce using rule 71 (idCall -> ID .)
    COMMA           reduce using rule 71 (idCall -> ID .)
    DOT_COMMA       reduce using rule 71 (idCall -> ID .)
    L_KEY           shift and go to state 57
    L_PAR           shift and go to state 58


state 36

    (7) variables -> VAR type ID L_KEY INTEGER . R_KEY DOT_COMMA variables
    (63) factor -> INTEGER .

  ! shift/reduce conflict for R_KEY resolved as shift
    R_KEY           shift and go to state 59
    TIMES           reduce using rule 63 (factor -> INTEGER .)
    DIVIDE          reduce using rule 63 (factor -> INTEGER .)
    MOD             reduce using rule 63 (factor -> INTEGER .)
    PLUS            reduce using rule 63 (factor -> INTEGER .)
    MINUS           reduce using rule 63 (factor -> INTEGER .)

  ! R_KEY           [ reduce using rule 63 (factor -> INTEGER .) ]


state 37

    (72) idCall -> ID L_KEY exp . R_KEY

    R_KEY           shift and go to state 60


state 38

    (56) exp -> term .
    (57) exp -> term . PLUS exp
    (58) exp -> term . MINUS exp

    R_KEY           reduce using rule 56 (exp -> term .)
    MORE_THAN       reduce using rule 56 (exp -> term .)
    LESS_THAN       reduce using rule 56 (exp -> term .)
    MORE_EQUAL      reduce using rule 56 (exp -> term .)
    LESS_EQUAL      reduce using rule 56 (exp -> term .)
    EQUAL           reduce using rule 56 (exp -> term .)
    NOT_EQUAL       reduce using rule 56 (exp -> term .)
    AND             reduce using rule 56 (exp -> term .)
    OR              reduce using rule 56 (exp -> term .)
    DOT_COMMA       reduce using rule 56 (exp -> term .)
    R_PAR           reduce using rule 56 (exp -> term .)
    COMMA           reduce using rule 56 (exp -> term .)
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62


state 39

    (59) term -> factor .
    (60) term -> factor . TIMES term
    (61) term -> factor . DIVIDE term
    (62) term -> factor . MOD term

    PLUS            reduce using rule 59 (term -> factor .)
    MINUS           reduce using rule 59 (term -> factor .)
    R_KEY           reduce using rule 59 (term -> factor .)
    MORE_THAN       reduce using rule 59 (term -> factor .)
    LESS_THAN       reduce using rule 59 (term -> factor .)
    MORE_EQUAL      reduce using rule 59 (term -> factor .)
    LESS_EQUAL      reduce using rule 59 (term -> factor .)
    EQUAL           reduce using rule 59 (term -> factor .)
    NOT_EQUAL       reduce using rule 59 (term -> factor .)
    AND             reduce using rule 59 (term -> factor .)
    OR              reduce using rule 59 (term -> factor .)
    DOT_COMMA       reduce using rule 59 (term -> factor .)
    R_PAR           reduce using rule 59 (term -> factor .)
    COMMA           reduce using rule 59 (term -> factor .)
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 64
    MOD             shift and go to state 65


state 40

    (64) factor -> DECIMAL .

    TIMES           reduce using rule 64 (factor -> DECIMAL .)
    DIVIDE          reduce using rule 64 (factor -> DECIMAL .)
    MOD             reduce using rule 64 (factor -> DECIMAL .)
    PLUS            reduce using rule 64 (factor -> DECIMAL .)
    MINUS           reduce using rule 64 (factor -> DECIMAL .)
    R_KEY           reduce using rule 64 (factor -> DECIMAL .)
    MORE_THAN       reduce using rule 64 (factor -> DECIMAL .)
    LESS_THAN       reduce using rule 64 (factor -> DECIMAL .)
    MORE_EQUAL      reduce using rule 64 (factor -> DECIMAL .)
    LESS_EQUAL      reduce using rule 64 (factor -> DECIMAL .)
    EQUAL           reduce using rule 64 (factor -> DECIMAL .)
    NOT_EQUAL       reduce using rule 64 (factor -> DECIMAL .)
    AND             reduce using rule 64 (factor -> DECIMAL .)
    OR              reduce using rule 64 (factor -> DECIMAL .)
    DOT_COMMA       reduce using rule 64 (factor -> DECIMAL .)
    R_PAR           reduce using rule 64 (factor -> DECIMAL .)
    COMMA           reduce using rule 64 (factor -> DECIMAL .)


state 41

    (65) factor -> ALPHANUMERIC .
